# lybic-sdk-python

./: .gitignore  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  __init__.py  dto.py  lybic.py  mcp.py  pylintrc  pyproject.toml  requirements.txt  sandbox.py  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  dependabot.yml
CHANGELOGS/: v0.1.0-release.md  v0.10.0-release.md  v0.10.1-release.md  v0.11.0-release.md  v0.12.0-release.md  v0.12.1-release.md  v0.12.2-release.md  v0.12.3-release.md  v0.12.4-release.md  v0.12.5-release.md  v0.13.0-release.md  v0.2.0-rc4-release.md  v0.2.0-release.md  v0.2.1-release.md  v0.2.2-release.md  v0.2.3-release.md  v0.3.0-release.md  v0.3.1-release.md  v0.3.2-release.md  v0.4.0-release.md  v0.5.0-release.md  v0.5.1-release.md  v0.5.2-release.md  v0.5.3-release.md  v0.6.0-release.md  v0.6.1-release.md  v0.6.2-release.md  v0.7.0-release.md  v0.7.1-release.md  v0.7.2-release.md  v0.7.3-release.md  v0.7.4-release.md  v0.7.5-release.md  v0.7.6-release.md  v0.7.7-release.md  v0.7.8-release.md  v0.8.0-release.md  v0.8.0b1-release.md  v0.8.0b2-release.md  v0.8.0b3-release.md  (+16 more)
docs/: api-change-from-0.x-to-1.x.md  error_handling_example.py  example.md  mcp.md  openapi.json  stream_shell.md  sync_client_examples.py  tools.json
lybic/: __init__.py  authentication.py  base.py  dto.py  lmcp.py  lybic.py  mcp.py  osworld.py  project.py  pyautogui.py  sandbox.py  stats.py  stream_shell.py  tools.py
lybic_sdk/: __init__.py  dto.py  lmcp.py  lybic.py  project.py  sandbox.py
lybic_sync/: README.md  __init__.py  base.py  (+5 more)
(+33 files in other folders)
